incipText not inciptText

--- a/Views/Home/DisplayFile.cshtml
+++ b/Views/Home/DisplayFile.cshtml
@@ -165,7 +165,7 @@
             "Arranger": extractMetadataTag(meiDoc, "arranger"),
             "Librettist": extractMetadataTag(meiDoc, "librettist"),
             "Original Musical Source": extractMetadataTag(meiDoc, "notes", "type", "musical source"), //Exclude CdC Number
-            "Text Incipit(s)": extractMetadataTag(meiDoc, "inciptText"),
+            "Text Incipit(s)": extractMetadataTag(meiDoc, "incipText"),
             "Source Type": extractMetadataTag(meiDoc, "media"),
             "Manuscript Library Location": extractMetadataTag(meiDoc, "library"),
             "Manuscript Classmark": extractMetadataTag(meiDoc, "classmark"),
