--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -467,6 +467,17 @@
 
 
         <script>
+
+
+                        document.addEventListener("DOMContentLoaded", function () {
+                document.addEventListener("keydown", function (event) {
+                    if (event.key === "Enter") {
+                        event.preventDefault(); // Prevent default form submission
+                        collectAndSendData(); // Call your button function
+                    }
+                });
+            });
+
             function addSearchRow() {
                 const container = document.getElementById("searchContainer");
 
