--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,6 +18,8 @@
 
     </div>
         <label style="font-weight: bold; margin-left: 500px;">By Keyword:</label>
+    <p style ="margin-left: 500px;">Each search field should contain only one word or phrase. 
+        <br />To search for multiple words and phrases, simply add another search row by clicking the '+' button on the right. </p>
         <p style="margin-left: 500px;">
             Note: For Clé du Caveau number, the format needs to be 0000.
             <br /> For example, to get number 2, search '0002'.
@@ -540,8 +542,7 @@
                 let searchRows = document.querySelectorAll(".search-row");
                 let requestData = {
                     meiChunk:"",
-                    //meiChunk: "\u003C?xml version=\u00221.0\u0022 encoding=\u0022UTF-8\u0022?\u003E\n\u003C?xml-model href=\u0022https://music-encoding.org/schema/5.1/mei-all.rng\u0022 type=\u0022application/xml\u0022 schematypens=\u0022http://relaxng.org/ns/structure/1.0\u0022?\u003E\n\u003C?xml-model href=\u0022https://music-encoding.org/schema/5.1/mei-all.rng\u0022 type=\u0022application/xml\u0022 schematypens=\u0022http://purl.oclc.org/dsdl/schematron\u0022?\u003E\n\u003Cmei xmlns=\u0022http://www.music-encoding.org/ns/mei\u0022 meiversion=\u00225.1\u0022\u003E\n   \u003CmeiHead\u003E\n      \u003CfileDesc\u003E\n         \u003CtitleStmt\u003E\n            \u003Ctitle /\u003E\n         \u003C/titleStmt\u003E\n         \u003CpubStmt\u003E\n            \u003Cdate isodate=\u00222025-02-28-11:08:44\u0022 /\u003E\n         \u003C/pubStmt\u003E\n      \u003C/fileDesc\u003E\n      \u003CencodingDesc\u003E\n         \u003CappInfo\u003E\n            \u003Capplication xml:id=\u0022verovio\u0022 version=\u00225.1.0-8c3069d\u0022\u003E\n               \u003Cname\u003EVerovio (5.1.0-8c3069d)\u003C/name\u003E\n            \u003C/application\u003E\n         \u003C/appInfo\u003E\n         \u003CprojectDesc\u003E\n            \u003Cp\u003EMEI encoded with Verovio\u003C/p\u003E\n            \u003Cp\u003EConverted from Plaine and Easie to MEI\u003C/p\u003E\n         \u003C/projectDesc\u003E\n      \u003C/encodingDesc\u003E\n   \u003C/meiHead\u003E\n   \u003Cmusic\u003E\n      \u003Cbody\u003E\n         \u003Cmdiv xml:id=\u0022m1blotdo\u0022\u003E\n            \u003Cscore xml:id=\u0022s98porn\u0022\u003E\n               \u003CscoreDef xml:id=\u0022ssm35er\u0022\u003E\n                  \u003CstaffGrp xml:id=\u0022smwwo00\u0022\u003E\n                     \u003CstaffDef xml:id=\u0022s1s4ffnc\u0022 n=\u00221\u0022 lines=\u00225\u0022 clef.shape=\u0022G\u0022 clef.line=\u00222\u0022 /\u003E\n                  \u003C/staffGrp\u003E\n               \u003C/scoreDef\u003E\n               \u003Csection xml:id=\u0022s2rcrlx\u0022\u003E\n                  \u003Cmeasure xml:id=\u0022mmlovzj\u0022 right=\u0022invis\u0022\u003E\n                     \u003Cstaff xml:id=\u0022sa56g6u\u0022 n=\u00221\u0022\u003E\n                        \u003Clayer xml:id=\u0022l4ks4fv\u0022 n=\u00221\u0022\u003E\n                           \u003Cnote xml:id=\u0022nmyzslu\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022c\u0022 /\u003E\n                           \u003Cnote xml:id=\u0022n6ug31v\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022d\u0022 /\u003E\n                           \u003Cnote xml:id=\u0022n1bcu6sn\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022e\u0022 /\u003E\n                        \u003C/layer\u003E\n                     \u003C/staff\u003E\n                  \u003C/measure\u003E\n               \u003C/section\u003E\n            \u003C/score\u003E\n         \u003C/mdiv\u003E\n      \u003C/body\u003E\n   \u003C/music\u003E\n\u003C/mei\u003E\n",
-                    andMap: {},
+ ins                    andMap: {},
                     orMap: {},
                     notMap: {}
                 };
@@ -583,16 +584,8 @@
                 });
 
 
-                    //                 var requestData = {
-                    //     "meiChunk": "\u003C?xml version=\u00221.0\u0022 encoding=\u0022UTF-8\u0022?\u003E\n\u003C?xml-model href=\u0022https://music-encoding.org/schema/5.1/mei-all.rng\u0022 type=\u0022application/xml\u0022 schematypens=\u0022http://relaxng.org/ns/structure/1.0\u0022?\u003E\n\u003C?xml-model href=\u0022https://music-encoding.org/schema/5.1/mei-all.rng\u0022 type=\u0022application/xml\u0022 schematypens=\u0022http://purl.oclc.org/dsdl/schematron\u0022?\u003E\n\u003Cmei xmlns=\u0022http://www.music-encoding.org/ns/mei\u0022 meiversion=\u00225.1\u0022\u003E\n   \u003CmeiHead\u003E\n      \u003CfileDesc\u003E\n         \u003CtitleStmt\u003E\n            \u003Ctitle /\u003E\n         \u003C/titleStmt\u003E\n         \u003CpubStmt\u003E\n            \u003Cdate isodate=\u00222025-03-17-09:50:08\u0022 /\u003E\n         \u003C/pubStmt\u003E\n      \u003C/fileDesc\u003E\n      \u003CencodingDesc\u003E\n         \u003CappInfo\u003E\n            \u003Capplication xml:id=\u0022verovio\u0022 version=\u00225.1.0-8c3069d\u0022\u003E\n               \u003Cname\u003EVerovio (5.1.0-8c3069d)\u003C/name\u003E\n            \u003C/application\u003E\n         \u003C/appInfo\u003E\n         \u003CprojectDesc\u003E\n            \u003Cp\u003EMEI encoded with Verovio\u003C/p\u003E\n            \u003Cp\u003EConverted from Plaine and Easie to MEI\u003C/p\u003E\n         \u003C/projectDesc\u003E\n      \u003C/encodingDesc\u003E\n   \u003C/meiHead\u003E\n   \u003Cmusic\u003E\n      \u003Cbody\u003E\n         \u003Cmdiv xml:id=\u0022m1blotdo\u0022\u003E\n            \u003Cscore xml:id=\u0022s98porn\u0022\u003E\n               \u003CscoreDef xml:id=\u0022ssm35er\u0022\u003E\n                  \u003CstaffGrp xml:id=\u0022smwwo00\u0022\u003E\n                     \u003CstaffDef xml:id=\u0022s1s4ffnc\u0022 n=\u00221\u0022 lines=\u00225\u0022 clef.shape=\u0022G\u0022 clef.line=\u00222\u0022 /\u003E\n                  \u003C/staffGrp\u003E\n               \u003C/scoreDef\u003E\n               \u003Csection xml:id=\u0022s2rcrlx\u0022\u003E\n                  \u003Cmeasure xml:id=\u0022mmlovzj\u0022 right=\u0022invis\u0022\u003E\n                     \u003Cstaff xml:id=\u0022sa56g6u\u0022 n=\u00221\u0022\u003E\n                        \u003Clayer xml:id=\u0022l4ks4fv\u0022 n=\u00221\u0022\u003E\n                           \u003Cnote xml:id=\u0022nmyzslu\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022c\u0022 /\u003E\n                           \u003Cnote xml:id=\u0022n6ug31v\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022d\u0022 /\u003E\n                           \u003Cnote xml:id=\u0022n1bcu6sn\u0022 dur=\u00224\u0022 oct=\u00225\u0022 pname=\u0022e\u0022 /\u003E\n                        \u003C/layer\u003E\n                     \u003C/staff\u003E\n                  \u003C/measure\u003E\n               \u003C/section\u003E\n            \u003C/score\u003E\n         \u003C/mdiv\u003E\n      \u003C/body\u003E\n   \u003C/music\u003E\n\u003C/mei\u003E\n",
-                    //       "andMap": {"keywords": ["doche"]},
-                    //     "orMap": {},
-                    //     "notMap": {}
-                    // };
+                //console.log("📤 Sending request data:", JSON.stringify(requestData));
 
-                console.log("📤 Sending request data:", JSON.stringify(requestData));
-
-                // Send data to HomeController action
 
             // Send data to HomeController action
             $.ajax({
@@ -601,10 +594,11 @@
                 contentType: "application/json",
                 data: JSON.stringify(requestData),
                 success: function (response) {
-                    console.log("📥 Response from server:", response);
+                    //console.log("📥 Response from server:", response);
 
                     if (!response.success) {
-                        console.error("🚨 API Error:", response.message);
+                        //console.error("🚨 API Error:", response.message);
+                        alert("Error");
                         return;
                     }
 
@@ -613,6 +607,11 @@
                     let linkContainer = document.getElementById('linkContainer'); // Create this container in your HTML
 
                     linkContainer.innerHTML = '';
+
+                                if (!hits || hits.length === 0) {
+                alert("No results found"); // Show alert if no results are returned
+                return;
+            }
 
                     hits.forEach((hit, index) => {
                         if (hit.source && hit.source.file_id) {
@@ -630,8 +629,9 @@
                     });
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
-                    console.error("🚨 AJAX Error:", textStatus, errorThrown);
-                    console.log("📤 Response Text:", jqXHR.responseText);
+                    //console.error("🚨 AJAX Error:", textStatus, errorThrown);
+                    //console.log("📤 Response Text:", jqXHR.responseText);
+                    alert("Error");
                 }
             });
             }
