--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,6 +72,8 @@
             <div id="linkContainer"></div>
         </div>
 
+        <br />
+        <br />
 
 
        @*  <!--Search Form-->
@@ -542,7 +544,7 @@
                 let searchRows = document.querySelectorAll(".search-row");
                 let requestData = {
                     meiChunk:"",
- ins                    andMap: {},
+                   andMap: {},
                     orMap: {},
                     notMap: {}
                 };
